# ai_beast

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES_CHECKLIST.md  CRITICAL_ISSUES_FOUND.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_TASKS.md  IMPLEMENTATION_TASKS_PART2.md  IMPLEMENTATION_TASKS_PART3.md  Makefile  README.md  README_IMPLEMENTATION.md  SETUP.md  UI_FUNCTIONALITY_VERIFICATION.md  VERIFICATION.md  ai_beast.code-workspace  corrections.sh  docker-compose.yml  instructions.md  kryptos_project.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vNEXT
.claude/: settings.local.json
.github/: copilot-instructions.md
beast/: cli.py  registry.json  runtime.py
compose/: base.yml
config/: agent_state.json  ai-beast.env  ai-beast.env.example  asset_packs.json  capabilities.local.json  comfy_nodes_allowlist.txt  features.env  features.local.yml  features.yml  model_sources_allowlist.txt  packs.json  paths.env  paths.env.example  ports.env  ports.env.example  profiles.env  prometheus.yml  state.example.json  state.json  tools.json  workflow_sources_allowlist.txt
docker/: compose.ops.yaml  compose.yaml
docs/: ARCHITECTURE.md  ASSETS.md  ASSETS_V9.md  DASHBOARD_TEST_REPORT.md  DRIFT.md  EXTENSIONS.md  LIVE_TOGGLES.md  OPTIMIZATION_SUMMARY.md  PACKS.md  PERFORMANCE.md  PROJECT_AUDIT_TODOS.md  RESOURCE_GRAPH.md  RESUME_PARSER.md  SECURITY_MODEL.md  STATE_RECONCILER.md  V14_COMPOSE_GRAPH.md  V15_TYPED_REGISTRY_RENDER.md  V17_COMPOSE_GRAPH_DRIFT.md  V18_TRUST_SECRETS_BACKUP_RESTORE.md  V7_WHATS_NEW.md  V8_WHATS_NEW.md  V9_WHATS_NEW.md  conf.py  index.rst  instructions.md
extensions/: README.md
launchers/: AI_Beast.command  README.md
modules/: __init__.py  container.py  logging_config.py
outputs/: metadata.db
schema/: graph.schema.json  resume_schema.json
scripts/: 00_bootstrap.py  00_preflight.py  00_preflight.sh  00_verify_stack.py  00_version.py  01_enable_profile.sh  02_runtime_switch.sh  05_manifest.py  05_manifest.sh  100_health_check.py  10_init_wizard.sh  10_preflight.py  12_secrets_keychain.sh  13_features_sync.sh  13_trust.sh  14_trust_enforce_asset.sh  15_agent_setup.sh  15_model_intake_scan.sh  16_custom_nodes_audit.sh  17_agent_verify.sh  17_custom_nodes_allowlist_check.sh  18_manifest_sign.sh  20_bootstrap_macos.sh  20_update.py  24_compose_render.sh  25_compose_generate.sh  30_cleanup.py  30_services.sh  32_status.sh  33_logs.sh  34_urls.sh  35_dashboard_install.sh  40_backup.py  40_healthcheck.sh  41_smoke_tests.sh  45_launchd.sh  50_backup.sh  50_health_check.py  60_monitor.py  60_restore.sh  (+35 more)
tests/: __init__.py  conftest.py  test_agent_runner.py  test_cache_watcher.py  test_capabilities_registry.py  test_cli.py  test_core_container.py  test_core_events.py  test_core_io.py  test_core_logging.py  test_core_metadata_db.py  test_core_watcher.py  test_dashboard_integration.py  test_dashboard_ui_functionality.py  test_evaluator.py  test_llm_manager.py  test_llm_manager_property.py  test_llm_manager_security.py  test_model_registry.py  test_modules.py  test_monitoring_and_cli.py  test_monitoring_module.py  test_monitoring_prometheus.py  test_monitoring_tracer.py  test_property_llm_manager.py  test_queue_scaffold.py  test_rag_comprehensive.py  test_rag_ingest.py  test_registry_catalog.py  (+7 more)
(+565 files in other folders)
